--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       <div id="header" >
         <div id="topcontent">
-          <img src="img/logo.png" usemap="#workmap" height=100>
+          <img src="logo.png" usemap="#workmap" height=100>
           <map name="workmap">
           <area shape="rect" coords="0,0,420,100" alt="ccse-ksu" href=http://ccse.kennesaw.edu/it/ target="_blank">
           </map>
