--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </ol>
         </div>
         <div class="eventlogo">
-          <img src="img/logo2.png" alt="logo2" usemap="#workmap"height=75px>
+          <img src="logo2.png" alt="logo2" usemap="#workmap"height=75px>
           <map name="workmap">
           <area shape="rect" coords="90,180,410,220" alt="calendar-ksu" href=http://ccse.kennesaw.edu/it/  target="_blank">
           </map>
