--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <div id="page">
       <div id="header" >
         <div id="topcontent">
-          <img src="img/logo.png" usemap="#workmap" height=100>
+          <img src="logo.png" usemap="#workmap" height=100>
           <map name="workmap">
           <area shape="rect" coords="0,0,420,100" alt="ccse-ksu" href=http://ccse.kennesaw.edu/it/ target="_blank">
           </map>
@@ -34,7 +34,7 @@
         <div class="grid-container">
 
           <div class="grid-child1">
-              <img src="img/SvetlanaPeltsverger.jpeg" height=200 width=150>
+              <img src="SvetlanaPeltsverger.jpeg" height=200 width=150>
               <a class="professor" target="_blank"href="http://ksuweb.kennesaw.edu/~speltsve/">Svetlana Peltsverger</a>
           </div>
 
@@ -51,7 +51,7 @@
         <div class="grid-container">
 
           <div class="grid-child1">
-              <img src="img/jamiejamison.jpeg" height=200 width=150>
+              <img src="jamiejamison.jpeg" height=200 width=150>
               <a class="professor" target="_blank"href="https://ccse.kennesaw.edu/it/faculty-staff.php">Jamie Jamison</a>
           </div>
 
@@ -69,7 +69,7 @@
         <div class="grid-container">
 
           <div class="grid-child1">
-              <img src="img/maria-de-Clemente.jpeg" height=200 width=150>
+              <img src="maria-de-Clemente.jpeg" height=200 width=150>
               <a class="professor" target="_blank"href="https://facultyweb.kennesaw.edu/mvalero2/index.php">Maria Valero De Clemente</a>
           </div>
 
